agregando validacion para tablas sin datos

--- a/src/main/resources/templates/fragments/bitacora/bitacoras.html
+++ b/src/main/resources/templates/fragments/bitacora/bitacoras.html
@@ -15,7 +15,7 @@
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/bitacora.png}"/>
                     </div>
         <!--<h3 align="center">Bitacoras</h3>-->
-    <div th:if="${not #lists.isEmpty(bitacoras)}">
+    <div>
        
         <table id = "tablita" class="table table-striped">
             <thead>
