--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script> Textheader('pnt_ceca',document.title);</script>
-    <div th:if="${not #lists.isEmpty(capacitaciones)}">
+    <div>
        <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
