--- a/src/main/resources/templates/fragments/comision/comisiones.html
+++ b/src/main/resources/templates/fragments/comision/comisiones.html
@@ -13,7 +13,7 @@
           <div class="row text-center">
                         <img src="../../static/image/images.jpeg" width="75" th:src="@{/image/images.jpeg}"/>
                     </div>
-    <div th:if="${not #lists.isEmpty(comisiones)}">
+    <div>
         <table id="tablita" class="table table-striped " style="width:100%" >
             <thead>
             <tr>
