--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -10,8 +10,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9">               
-            <div th:if="${not #lists.isEmpty(costocapacitaciones)}">
-                <br><br>
+            <div><br><br>
                 <div class="row text-center">
                     <img src="../../static/image/costos.png" width="75" th:src="@{/image/costos.png}"/>
                 </div>
