--- a/src/main/resources/templates/fragments/empleado/empleados.html
+++ b/src/main/resources/templates/fragments/empleado/empleados.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script> Textheader('pnt_cem13',document.title);</script>
-    <div th:if="${not #lists.isEmpty(empleados)}" >
+    <div>
          <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
