--- a/src/main/resources/templates/fragments/inasistencia/inasistencias.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistencias.html
@@ -5,7 +5,7 @@
     <title>Listado de Inasistencias</title>
 </head>
 <body>
-    <div th:if="${not #lists.isEmpty(inasistencias)}">        
+    <div>        
         <div class="row">
             <div class="col-md-3">
                 <th:block th:include="../templates/menu"></th:block>
