--- a/src/main/resources/templates/fragments/usuariorol/usuariosrol.html
+++ b/src/main/resources/templates/fragments/usuariorol/usuariosrol.html
@@ -21,7 +21,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/images.jpeg}"/>
                     </div>
         <h3 align="center">Todos los Usuarios</h3>
-    <div th:if="${not #lists.isEmpty(usuariorols)}">
+    <div>
         <div class="table-responsive">
   <table class="table">
         <!--<table class="table table-striped">-->
