--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -11,7 +11,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9">
-            <div th:if="${not #lists.isEmpty(asistenciacapacitaciones)}">
+            <div>
                 <br><br>
                 <div class="row text-center">
                     <img src="../../static/image/asistencia.png" width="150" th:src="@{/image/asistencia.png}"/>
