--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -13,7 +13,7 @@
             <div class="row text-center">
                 <img src="../../static/image/images.jpeg" width="75" th:src="@{/image/beneficio.png}"/>
             </div>
-            <div th:if="${not #lists.isEmpty(beneficios)}">
+            <div>
                 <table id = "tablita" class="table table-striped">
                     <thead>
                         <tr>
