--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -14,7 +14,7 @@
                 <img src="../../static/image/capacitador.png" width="75" th:src="@{/image/capacitador.png}"/>
             </div>
             <br>
-            <div th:if="${not #lists.isEmpty(capacitadores)}">
+            <div>
                 <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
                         <tr>
