--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -5,16 +5,14 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <div th:if="${not #lists.isEmpty(comites)}">
+    <div>
         <div class="row">
             <div class="col-md-3">
                 <th:block th:include="../templates/menu"></th:block>
             </div>
-            <div class="col-md-9">
-                <br>
+            <div class="col-md-9"><br>
                 <div class="row text-center">
-                    <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
-                    <br>
+                    <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/><br>
                     <table id="tablita" class="table table-striped table-bordered" >
                         <thead> 
                             <tr>
@@ -45,108 +43,106 @@
                         </tr>
                     </table>
                 </div>
-            </div>    
-            <div class="col-md-12">
-                <th:block th:include="../templates/footer"></th:block>
-            </div>   
-        </div>
+            </div>
+        </div>    
+        <div class="col-md-12"><th:block th:include="../templates/footer"></th:block></div>   
+    </div>
+    <script th:inline="javascript">
+        Textheader('pnt_crco', document.title);
+        $(document).ready(function () {
 
-        <script th:inline="javascript">
-            Textheader('pnt_crco', document.title);
-            $(document).ready(function () {
+        if ([[${msg}]] === 0){
+        swal({
+        title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+        }).then(function() {
+        location.href = '../comites/';
+        swal({
+        text: "Redirigiendo a consulta de comites",
+                icon: "success"
+                })
+        });
+        }
 
-            if ([[${msg}]] === 0){
-            swal({
-            title: "Exito!",
-                    text: "Registro agregado correctamente",
-                    type: "success",
-                    icon: "success"
-            }).then(function() {
-            location.href = '../comites/';
-               swal({
-       text: "Redirigiendo a consulta de comites",
-       icon: "success"
-    })
-            });
-            }
+        if ([[${msg}]] === 1){
+        swal({
+        title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+        });
+        }
+        });</script> 
+    <script th:inline="javascript">
+        $(document).ready(function () {
+        $('#tablita').DataTable({
+        "language": {
+        "sProcessing":     "Procesando...",
+                "sLengthMenu":     "Mostrar _MENU_ registros",
+                "sZeroRecords":    "No se encontraron resultados",
+                "sEmptyTable":     "Ningún dato disponible en esta tabla",
+                "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+                "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+                "sInfoPostFix":    "",
+                "sSearch":         "Buscar:",
+                "sUrl":            "",
+                "sInfoThousands":  ",",
+                "sLoadingRecords": "Cargando...",
+                "oPaginate": {
+                "sFirst":    "Primero",
+                        "sLast":     "Último",
+                        "sNext":     "Siguiente",
+                        "sPrevious": "Anterior"
+                        },
+                "oAria": {
+                "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+                        }
+        }});
+        });
+    </script>
+    <script th:inline="javascript">
+        $(document).ready(function () {
+        if ([[${msg}]] === 3){
+        swal({
 
-            if ([[${msg}]] === 1){
-            swal({
-            title: "ERROR!",
-                    text: "Ocurrio un error en el proceso",
-                    type: "error",
-                    icon: "error"
-            });
-            }
-            });</script> 
-        <script th:inline="javascript">
-            $(document).ready(function () {
-            $('#tablita').DataTable({
-            "language": {
-    "sProcessing":     "Procesando...",
-    "sLengthMenu":     "Mostrar _MENU_ registros",
-    "sZeroRecords":    "No se encontraron resultados",
-    "sEmptyTable":     "Ningún dato disponible en esta tabla",
-    "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-    "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-    "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-    "sInfoPostFix":    "",
-    "sSearch":         "Buscar:",
-    "sUrl":            "",
-    "sInfoThousands":  ",",
-    "sLoadingRecords": "Cargando...",
-    "oPaginate": {
-        "sFirst":    "Primero",
-        "sLast":     "Último",
-        "sNext":     "Siguiente",
-        "sPrevious": "Anterior"
-    },
-    "oAria": {
-        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-    }
-}});
-            });
-        </script>
-        <script th:inline="javascript">
-            $(document).ready(function () {
-            if ([[${msg}]] === 3){
-            swal({
+        title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+        }).then(function() {
+        location.href = '../../comites/';
+        });
+        }
 
-            title: "Exito!",
-                    text: "Registro Eliminado correctamente",
-                    type: "success",
-                    icon: "success",
-            }).then(function() {
-            location.href = '../../comites/';
-            });
-            }
-
-            if ([[${msg}]] === 4){
-            swal({
-            title: "ERROR!",
-                    text: "Ocurrio un error al eliminar el registro",
-                    type: "error",
-                    icon: "error"
-            });
-            }
-            });
-            function eliminar(id) {
-            swal({
-            title: "Desea Eliminar?",
-                    text: "favor confirme que desea eliminar este registro!",
-                    icon: "warning",
-                    buttons: true,
-                    dangerMode: true,
-            })
-                    .then((willDelete) => {
-                    if (willDelete) {
-                    location.href = './delete/' + id;
-                    } else {
-                    swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                    }
-                    });
-            }
-        </script>
+        if ([[${msg}]] === 4){
+        swal({
+        title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+        });
+        }
+        });
+        function eliminar(id) {
+        swal({
+        title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+        })
+                .then((willDelete) => {
+                if (willDelete) {
+                location.href = './delete/' + id;
+                } else {
+                swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+                }
+                });
+        }
+    </script>
 </body>
 </html>
