--- a/src/main/resources/templates/fragments/contacto/contactos.html
+++ b/src/main/resources/templates/fragments/contacto/contactos.html
@@ -1,96 +1,83 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>Consultar contactos del empleado</title>
+    <head lang="en">
+        <title>Consultar contactos del empleado</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--<div class="container">-->
-    
-    <div th:if="${not #lists.isEmpty(contactos)}" >
-         <div class="row">
-        <div class="col-md-3">
-            <th:block th:include="../templates/menu"></th:block>
+    <div>
+        <div class="row">
+            <div class="col-md-3"><th:block th:include="../templates/menu"></th:block></div>
+            <div class="col-md-9">
+                <h3 align="center">Listado de contactos</h3>
+                <table class="table table-striped">
+                    <tr >
+                        <th>Código del contacto</th>
+                        <th>Nombre del contacto</th>
+                        <th>Dirección del contacto </th>
+                        <th>Teléfono fijo del contacto</th>
+                        <th>Teléfono móvil del contacto</th>
+                        <th>Correo electronico del contacto</th>
+                    </tr>
+                    <tr th:each="empleado : ${empleados}">
+                        <td th:text="${contacto.codigocontacto}">codigocontacto</td>
+                        <td th:text="${contacto.nombrecontacto} + ' ' + ${contacto.apellidocontacto}">nombrecontacto</td>
+                        <td th:text="${contacto.direccion}">direccion</td>                
+                        <td th:text="${contacto.telefonofijocontacto}">telefonofijocontacto</td>
+                        <td th:text="${contacto.telefonomovilcontacto}">telefonomovilcontacto</td>
+                        <td th:text="${contacto.emailcontacto}">emailcontacto</td>
+                        <td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-default">Mostrar</a></td>
+                        <td><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-default">Edit</a></td>
+                        <td><a th:href="${'./delete/' + empleado.codigoempleado}" class="btn btn-danger">Delete</a></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-md-12">
+                <th:block th:include="../templates/footer"></th:block>
+            </div>
         </div>
-        <div class="col-md-9">
-            
-        <!--</div>-->
-        <h3 align="center">Listado de contactos</h3>
-        <table class="table table-striped">
-            <tr >
-                <th>Código del contacto</th>
-                <th>Nombre del contacto</th>
-                <th>Dirección del contacto </th>
-                <th>Teléfono fijo del contacto</th>
-                <th>Teléfono móvil del contacto</th>
-                <th>Correo electronico del contacto</th>
-            </tr>
-            <tr th:each="empleado : ${empleados}">
-                <td th:text="${contacto.codigocontacto}">codigocontacto</td>
-                <td th:text="${contacto.nombrecontacto} + ' ' + ${contacto.apellidocontacto}">nombrecontacto</td>
-                <td th:text="${contacto.direccion}">direccion</td>                
-                <td th:text="${contacto.telefonofijocontacto}">telefonofijocontacto</td>
-                <td th:text="${contacto.telefonomovilcontacto}">telefonomovilcontacto</td>
-                <td th:text="${contacto.emailcontacto}">emailcontacto</td>
-                <td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-default">Mostrar</a></td>
-                <td><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-default">Edit</a></td>
-                <td><a th:href="${'./delete/' + empleado.codigoempleado}" class="btn btn-danger">Delete</a></td>
-            </tr>
-        </table>
-        </div>
-   
-<!--</div>-->
-<div class="col-md-12">
-            <th:block th:include="../templates/footer"></th:block>
-        </div>
- </div>
-   </div> 
+    </div> 
 </body>
 <script th:inline="javascript">
-
     $(document).ready(function () {
     if ([[${msg}]] === 0){
-
     swal({
     title: "Exito!",
             text: "Registro agregado correctamente",
             type: "success",
             icon: "success"
-            }).then(function() {
-    location.href = '../../empleados/show/'+ [[${empleado}]];
-       swal({
-       text: "Redirigiendo a consulta de empleado",
-       icon: "success"
+    }).then(function() {
+    location.href = '../../empleados/show/' + [[${empleado}]];
+    swal({
+    text: "Redirigiendo a consulta de empleado",
+            icon: "success"
     })
     });
     }
     if ([[${msg}]] === 2){
-
     swal({
     title: "Exito!",
             text: "Registro agregado correctamente",
             type: "success",
             icon: "success"
-            }).then(function() {
-    location.href = '../../../empleados/show/'+ [[${empleado}]];
-       swal({
-       text: "Redirigiendo a consulta de empleado",
-       icon: "success"
+    }).then(function() {
+    location.href = '../../../empleados/show/' + [[${empleado}]];
+    swal({
+    text: "Redirigiendo a consulta de empleado",
+            icon: "success"
     })
     });
     }
-    
     if ([[${msg}]] === 1){
     swal({
     title: "ERROR!",
             text: "Ocurrio un error en el proceso",
             type: "error",
             icon: "error"
-            });
+    });
     }
     });</script> 
 <script th:inline="javascript">
-
     $(document).ready(function () {
     if ([[${msg}]] === 3){
 
@@ -99,20 +86,17 @@
             text: "Registro eliminado correctamente",
             type: "success",
             icon: "success"
-            }).then(function() {
-//                alert([[${empleado}]])
-                 location.href = '../../../empleados/show/'+[[${empleado}]];
-//    location.href = '../../empleados/';
+    }).then(function() {
+    location.href = '../../../empleados/show/' + [[${empleado}]];
     });
     }
-
     if ([[${msg}]] === 4){
     swal({
     title: "ERROR!",
             text: "Ocurrio un error en el proceso",
             type: "error",
             icon: "error"
-            });
+    });
     }
     });</script> 
 </html>
