--- a/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitaciones.html
+++ b/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitaciones.html
@@ -1,126 +1,111 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-
-    <title>Asignar capacitaciones a empleados</title>
-     <th:block th:include="../templates/header"></th:block>
- 
-
-  
+    <head lang="en">
+        <title>Asignar capacitaciones a empleados</title>
+    <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-
-<script> Textheader('pnt_empc',document.title);</script>
- <div class="row">
- <div class="col-md-3">
+    <script> Textheader('pnt_empc', document.title);</script>
+    <div class="row">
+        <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
-        <div class="col-md-8">
-            <br>
+        <div class="col-md-8"><br>
             <div class="row text-center">
-                        <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/images.jpeg}"/>
+                <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/images.jpeg}"/>
+            </div>
+            <h3 align="center"></h3>
+            <div>
+                <form class="form-horizontal">
+                    <div class="table-responsive">
+                        <table id="tablita" class="table table-striped table-bordered" >
+                            <thead>
+                                <tr>
+                                    <th>Nombre de empleado</th>
+                                    <th>Nombre capacitacion</th>
+                                </tr>
+                            </thead>
+                            <tr th:each="empleadocapacitacion : ${empleadocapacitaciones}">
+                                <td th:text="${empleadocapacitacion.empleado.nombreempleado}+',
+                                    '+${empleadocapacitacion.empleado.apellidoempleado}">Nombre de Empleado</td>
+                                <td th:text="${empleadocapacitacion.capacitacion.nombrecapacitacion}">Nombre Capacitacion</td>
+                            </tr>    
+                        </table>
                     </div>
-    <h3 align="center"></h3>
-        <div>
-            <form class="form-horizontal">
-
-           
-            
-             <div class="table-responsive">
-                     <table id="tablita" class="table table-striped table-bordered" >
-                        <thead>
-                            <tr>
-                                <th>Nombre de empleado</th>
-                                <th>Nombre capacitacion</th>
-                            </tr>
-                        </thead>
-                        <tr th:each="empleadocapacitacion : ${empleadocapacitaciones}">
-                            <td th:text="${empleadocapacitacion.empleado.nombreempleado}+',
-                                '+${empleadocapacitacion.empleado.apellidoempleado}">Nombre de Empleado</td>
-                            <td th:text="${empleadocapacitacion.capacitacion.nombrecapacitacion}">Nombre Capacitacion</td>
-                        </tr>    
-                    </table>
-                </div>
-                
-                 </form>
-         
-    </div>
-</div>
-      <div class="col-md-12">
+                </form>
+            </div>
+        </div>
+        <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-     </div>
-
+    </div>
 </body>
 <script th:inline="javascript">
     $(document).ready(function () {
     $('#tablita').DataTable({
     "language": {
     "sProcessing":     "Procesando...",
-    "sLengthMenu":     "Mostrar _MENU_ registros",
-    "sZeroRecords":    "No se encontraron resultados",
-    "sEmptyTable":     "Ningún dato disponible en esta tabla",
-    "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-    "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-    "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-    "sInfoPostFix":    "",
-    "sSearch":         "Buscar:",
-    "sUrl":            "",
-    "sInfoThousands":  ",",
-    "sLoadingRecords": "Cargando...",
-    "oPaginate": {
-        "sFirst":    "Primero",
-        "sLast":     "Último",
-        "sNext":     "Siguiente",
-        "sPrevious": "Anterior"
-    },
-    "oAria": {
-        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-    }
-}});
-    
+            "sLengthMenu":     "Mostrar _MENU_ registros",
+            "sZeroRecords":    "No se encontraron resultados",
+            "sEmptyTable":     "Ningún dato disponible en esta tabla",
+            "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+            "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+            "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+            "sInfoPostFix":    "",
+            "sSearch":         "Buscar:",
+            "sUrl":            "",
+            "sInfoThousands":  ",",
+            "sLoadingRecords": "Cargando...",
+            "oPaginate": {
+            "sFirst":    "Primero",
+                    "sLast":     "Último",
+                    "sNext":     "Siguiente",
+                    "sPrevious": "Anterior"
+            },
+            "oAria": {
+            "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+            }
+    }});
+    });</script>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if ([[${msg}]] === 3){
+    swal({
+
+    title: "Exito!",
+            text: "Registro Eliminado correctamente",
+            type: "success",
+            icon: "success",
+    }).then(function() {
+    location.href = '../../../misiones/';
     });
+    }
+
+    if ([[${msg}]] === 4){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error al eliminar el registro",
+            type: "error",
+            icon: "error"
+    });
+    }
+    });
+    function eliminar(id) {
+    swal({
+    title: "Desea Eliminar?",
+            text: "Favor confirme que desea eliminar este registro!",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+    })
+            .then((willDelete) => {
+            if (willDelete) {
+            location.href = '../deletemisionesemp/' + id;
+            } else {
+            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+            }
+            });
+    }
 </script>
-   <script th:inline="javascript">
-        $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
-                text: "Registro Eliminado correctamente",
-                type: "success",
-                icon: "success",
-       }).then(function() {
-                location.href = '../../../misiones/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error al eliminar el registro",
-                type: "error",
-                icon: "error"
-       });
-    }
-    });
-        
-        function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
-                text: "Favor confirme que desea eliminar este registro!",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = '../deletemisionesemp/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
-                    });
-        }
-    </script>
 </html>
