--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
@@ -13,7 +13,7 @@
             <div class="row text-center">
                 <img src="../../static/image/evaluacion.png" width="75" th:src="@{/image/evaluacion.png}"/>
             </div>
-            <div th:if="${not #lists.isEmpty(evaluacioncapacitaciones)}">
+            <div>
                 <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
                         <tr>
@@ -64,9 +64,9 @@
         }).then(function() {
         location.href = '../evaluacioncapacitaciones/';
         swal({
-                text: "Redirigiendo a consulta de empleados",
+        text: "Redirigiendo a consulta de empleados",
                 icon: "success"
-                })
+        })
         });
         }
 
