--- a/src/main/resources/templates/fragments/experiencialaboral/experiencias.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experiencias.html
@@ -33,21 +33,12 @@
   text-decoration:none;
   padding:5px 5px 5px 0;
 }
- </style>
-     
-    <title>SISADMRH-Consulta de Datos de Experiencia Laboral</title>
+ </style> 
+  <title>SISADMRH-Consulta de Datos de Experiencia Laboral</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<!--      <div class="contenedorizq"><label  >pnt_cem6_2</label>  
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div><br>-->
 <script> Textheader('pnt_cem6_2',document.title);</script>
-<!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -56,31 +47,16 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/experiencia.jpg}"/>
             </div>
-    <h3 align="center"></h3>
-    
-
-    
-        <br>
-        
-        
-        
-  
-
+    <h3 align="center"></h3><br>
                </div>
             </div>
-
    <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-
-        
-       
 </body>
 <script th:inline="javascript">
-
     $(document).ready(function () {
     if ([[${msg}]] === 0){
-//alert(document.getElementById("codem").value);
     swal({
     title: "Exito!",
             text: "Registro agregado correctamente",
@@ -120,93 +96,26 @@ if ([[${msg}]] === 2){
     });</script> 
 <script src="../static/css/hydro/js/jquery.js"></script>
 	<script>
-// 		$(document).ready(function() {
-// 			$(function () {
-// 				$("#datepickersince").datepicker();
-// 			});
-
-// 			$(function () {
-// 				$("#datepickeruntil").datepicker();
-// 			});
-// 		});
-		
 		$(document).ready(function () {
 		    var date = new Date();
 		    var currentMonth = date.getMonth();
 		    var currentDate = date.getDate();
 		    var currentYear = date.getFullYear();
-                    
-		    $('#fechanacimiento').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		       dateFormat: 'yy-mm-dd'
-		    });
-		    
-		    $('#fechasepu').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechasepr').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechamin').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechanacde').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechahfa').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechadfa').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('#fechacapreevento').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                    $('fechadexlaboral').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    $('fechahexlaboral').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    $('fechadubf').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    $('fechahubf').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                     $('fechaicontrato').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                     $('fechafcontrato').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
-                    
-                     $('fechahubf').datepicker({
-// 		        minDate: new Date(currentYear, currentMonth, currentDate),
-		        dateFormat: 'yy-mm-dd'
-		    });
+		    $('#fechanacimiento').datepicker({          dateFormat: 'yy-mm-dd'		    });
+		    $('#fechasepu').datepicker({                dateFormat: 'yy-mm-dd'		    });
+                    $('#fechasepr').datepicker({                dateFormat: 'yy-mm-dd'		    });
+                    $('#fechamin').datepicker({		        dateFormat: 'yy-mm-dd'		    });
+                    $('#fechanacde').datepicker({               dateFormat: 'yy-mm-dd'		    });
+                    $('#fechahfa').datepicker({		        dateFormat: 'yy-mm-dd'		    });
+                    $('#fechadfa').datepicker({		        dateFormat: 'yy-mm-dd'		    });
+                    $('#fechacapreevento').datepicker({         dateFormat: 'yy-mm-dd'		    });
+                    $('fechadexlaboral').datepicker({           dateFormat: 'yy-mm-dd'		    });
+                    $('fechahexlaboral').datepicker({	        dateFormat: 'yy-mm-dd'		    });
+                    $('fechadubf').datepicker({		        dateFormat: 'yy-mm-dd'		    });
+                    $('fechahubf').datepicker({		        dateFormat: 'yy-mm-dd'		    });
+                     $('fechaicontrato').datepicker({	        dateFormat: 'yy-mm-dd'		    });
+                     $('fechafcontrato').datepicker({           dateFormat: 'yy-mm-dd'		    });
+                     $('fechahubf').datepicker({                dateFormat: 'yy-mm-dd'		    });
 		});
 	</script>
 <script th:inline="javascript">
@@ -221,7 +130,6 @@ if ([[${msg}]] === 2){
             icon: "success"
             }).then(function() {
                  location.href = '../../../empleados/show/'+[[${empleado}]];
-//    location.href = '../empleados/show/'+ document.getElementById("codem").value;
     });
     }
 
