--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -1,134 +1,130 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>Lista de Niveles Escolares</title>
+    <head lang="en">
+        <title>Lista de Niveles Escolares</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-     <div class="row">     
-<div class="col-md-3">
-                        <th:block th:include="../templates/menu"></th:block>
-                    </div>
-     <div class="col-md-9">
-         <br><br>
-          <div class="row text-center">
-                        <img src="../../static/image/formacion.png" width="75" th:src="@{/image/formacion.png}"/>
-    <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
-          <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
-             <thead>
-            <tr>
-                <th>Centro Educativo</th>
-                <th>Años Aprobados</th>
-                  <th>Estudios realizados</th>
-                 <th>Finalizado</th>
-                  <th>Titulo Obtenido</th>
-                   <th>País del Nivel Escolar</th>
-                   <th>Fecha Inicio NIvel Escolar</th>
-                   <th>Fecha Fin Nivel Escolar</th>
-                 <th></th>
-                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
-                 <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
-            </tr>
-             </thead>
-            <tr th:each="nivelescolaridad : ${nivelescolaridades}">
-                <td th:text="${nivelescolaridad.centroeducativo}">Centro educativo</td>
-                <td th:text="${nivelescolaridad.aniosaprobados}">Anos aprobados</td> 
-                <td th:text="${nivelescolaridad.estudiorealizado}">Estudios</td> 
-                <td th:text="${nivelescolaridad.finalizado}">finalizado</td>
-                <td th:text="${nivelescolaridad.tituloobtenido}">Titulo Obtenido</td>
-                <td th:text="${nivelescolaridad. paisnivelescolaridad}">Pais nivel escolaridad</td>
-                <td th:text="${#calendars.format(nivelescolaridad.fechadesdenivelescolaridad, 'dd/MM/yyyy')}">Fecha Desde</td>
-                <td th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd/MM/yyyy')}">Fecha Hasta</td>
-                <td>  <a th:href="${'./show/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-info">Mostrar</a></td>
-                <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a th:href="${'./edit/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-success">Editar</a> </td>
-                <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a  class="btn btn-danger" th:onclick="'eliminar(\''+ ${nivelescolaridad.codigonivelnivelescolaridad} + '\');'" >Eliminar</a> </td>
-            </tr>
-        </table>
+    <div class="row">     
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-9">
+            <br><br>
+            <div class="row text-center">
+                <img src="../../static/image/formacion.png" width="75" th:src="@{/image/formacion.png}"/>
+                <div>
+                    <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
+                        <thead>
+                            <tr>
+                                <th>Centro Educativo</th>
+                                <th>Años Aprobados</th>
+                                <th>Estudios realizados</th>
+                                <th>Finalizado</th>
+                                <th>Titulo Obtenido</th>
+                                <th>País del Nivel Escolar</th>
+                                <th>Fecha Inicio NIvel Escolar</th>
+                                <th>Fecha Fin Nivel Escolar</th>
+                                <th></th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                                <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                            </tr>
+                        </thead>
+                        <tr th:each="nivelescolaridad : ${nivelescolaridades}">
+                            <td th:text="${nivelescolaridad.centroeducativo}">Centro educativo</td>
+                            <td th:text="${nivelescolaridad.aniosaprobados}">Anos aprobados</td> 
+                            <td th:text="${nivelescolaridad.estudiorealizado}">Estudios</td> 
+                            <td th:text="${nivelescolaridad.finalizado}">finalizado</td>
+                            <td th:text="${nivelescolaridad.tituloobtenido}">Titulo Obtenido</td>
+                            <td th:text="${nivelescolaridad. paisnivelescolaridad}">Pais nivel escolaridad</td>
+                            <td th:text="${#calendars.format(nivelescolaridad.fechadesdenivelescolaridad, 'dd/MM/yyyy')}">Fecha Desde</td>
+                            <td th:text="${#calendars.format(nivelescolaridad.fechahastanivelescolaridad, 'dd/MM/yyyy')}">Fecha Hasta</td>
+                            <td>  <a th:href="${'./show/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-info">Mostrar</a></td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a th:href="${'./edit/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-success">Editar</a> </td>
+                            <td sec:authorize="hasRole('ROLE_OPERATIVO')"> <a  class="btn btn-danger" th:onclick="'eliminar(\''+ ${nivelescolaridad.codigonivelnivelescolaridad} + '\');'" >Eliminar</a> </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>   
     </div>
-                        
-</div>
-         </div>
-         
-         <div class="col-md-12">
-                    <th:block th:include="../templates/footer"></th:block>
-                </div>   
-         </div>
-   <script th:inline="javascript">
-   $(document).ready(function () {
-    
-    if ([[${msg}]] === 0){
-    swal({
-    title: "Exito!",
-            text: "Registro agregado correctamente",
-            type: "success",
-            icon: "success"
-    }).then(function() {
-    location.href = '../nivelescolaridades/';
-    });
-    }
-
-    if ([[${msg}]] === 1){
-    swal({
-    title: "ERROR!",
-            text: "Ocurrio un error en el proceso",
-            type: "error",
-            icon: "error"
-    });
-    }
-    });
-</script> 
- <script th:inline="javascript">
+    <script th:inline="javascript">
         $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
+
+        if ([[${msg}]] === 0){
+        swal({
+        title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+        }).then(function() {
+        location.href = '../nivelescolaridades/';
+        });
+        }
+
+        if ([[${msg}]] === 1){
+        swal({
+        title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+        });
+        }
+        });
+    </script> 
+    <script th:inline="javascript">
+        $(document).ready(function () {
+        if ([[${msg}]] === 3){
+        swal({
+
+        title: "Exito!",
                 text: "Registro Eliminado correctamente",
                 type: "success",
                 icon: "success",
-       }).then(function() {
-                location.href = '../../nivelescolaridades/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
+        }).then(function() {
+        location.href = '../../nivelescolaridades/';
+        });
+        }
+
+        if ([[${msg}]] === 4){
         swal({
-                title: "ERROR!",
+        title: "ERROR!",
                 text: "Ocurrio un error al eliminar el registro",
                 type: "error",
                 icon: "error"
-       });
-    }
-    });
-        
+        });
+        }
+        });
         function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
+        swal({
+        title: "Desea Eliminar?",
                 text: "favor confirme que desea eliminar este registro!",
                 icon: "warning",
                 buttons: true,
                 dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
-                    });
+        })
+                .then((willDelete) => {
+                if (willDelete) {
+                location.href = './delete/' + id;
+                } else {
+                swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+                }
+                });
         }
     </script>
     <script th:inline="javascript">
-      $(document).ready(function () {
-            $('#tablita').DataTable( {
+        $(document).ready(function () {
+        $('#tablita').DataTable({
         "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
-    });
-	</script>
-        <script>
-    Textheader('pnt_cem4',document.title);
-</script>
-        
+        "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }});
+        });
+    </script>
+    <script>
+        Textheader('pnt_cem4', document.title);
+    </script>
 </body>
 </html>
