--- a/src/main/resources/templates/fragments/puesto/puestos.html
+++ b/src/main/resources/templates/fragments/puesto/puestos.html
@@ -1,126 +1,122 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>Listado de puestos de trabajo</title>
+    <head lang="en">
+        <title>Listado de puestos de trabajo</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<script> Textheader('pnt_cpto1',document.title);</script>
-    <div th:if="${not #lists.isEmpty(puestos)}" >
+    <script> Textheader('pnt_cpto1', document.title);</script>
+    <div>
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9"> <br><br>
             <div class="row text-center">
-                    <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/puestos.png}"/>
+                <img src="../../static/image/images.jpeg" width="100" th:src="@{/image/puestos.png}"/>
             </div> 
-        <h3 align="center"></h3>
-        <table id="tablita" class="table table-striped table-bordered" >
-            <thead>
-            <tr >
-                <th>Codigo de puesto</th>
-                <th>Nombre de  puesto</th>
-                <th>Sueldo base($)</th>
-                <th>Estado</th>
-                <th>Fecha de aprobacion </th>
-                <th>Fecha de baja</th>
-                <th></th>
-		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
-		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
-            </tr>
-            </thead>
-            <tr th:each="puesto : ${puestos}">
-                <td th:text="${puesto.codigopuesto}">codigopuesto</td>
-                <td th:text="${puesto.nombrepuesto}">nombrepuesto</td>
-                <td th:text="${#numbers.formatDecimal(puesto.sueldobase, 0, 'COMMA', 2, 'POINT')}">sueldobase</td>
-                <td>
-                    <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span>
-                    <span th:if="${puesto.estadopuesto} == 2"  th:text="Inactivo"></span>
-               </td> 
-                <td th:text="${#calendars.format(puesto.fechaaprobacion, 'dd/MM/yyyy')}	">fecha ingreso</td>
-                <td th:text="${#calendars.format(puesto.fechabaja, 'dd/MM/yyyy')}	">fecha baja</td>
-                <td><a th:href="${'./show/' + puesto.codigopuesto}" class="btn btn-info">Mostrar</a></td>
-                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + puesto.codigopuesto}" class="btn btn-success">Editar</a></td>
-                <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:onclick="'eliminar(\'' +${ puesto.codigopuesto} +'\');'" class="btn btn-danger">Eliminar</a></td>
-            </tr>
-        </table>
+            <h3 align="center"></h3>
+            <table id="tablita" class="table table-striped table-bordered" >
+                <thead>
+                    <tr >
+                        <th>Codigo de puesto</th>
+                        <th>Nombre de  puesto</th>
+                        <th>Sueldo base($)</th>
+                        <th>Estado</th>
+                        <th>Fecha de aprobacion </th>
+                        <th>Fecha de baja</th>
+                        <th></th>
+                        <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                        <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                    </tr>
+                </thead>
+                <tr th:each="puesto : ${puestos}">
+                    <td th:text="${puesto.codigopuesto}">codigopuesto</td>
+                    <td th:text="${puesto.nombrepuesto}">nombrepuesto</td>
+                    <td th:text="${#numbers.formatDecimal(puesto.sueldobase, 0, 'COMMA', 2, 'POINT')}">sueldobase</td>
+                    <td>
+                        <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span>
+                        <span th:if="${puesto.estadopuesto} == 2"  th:text="Inactivo"></span>
+                    </td> 
+                    <td th:text="${#calendars.format(puesto.fechaaprobacion, 'dd/MM/yyyy')}	">fecha ingreso</td>
+                    <td th:text="${#calendars.format(puesto.fechabaja, 'dd/MM/yyyy')}	">fecha baja</td>
+                    <td><a th:href="${'./show/' + puesto.codigopuesto}" class="btn btn-info">Mostrar</a></td>
+                    <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + puesto.codigopuesto}" class="btn btn-success">Editar</a></td>
+                    <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:onclick="'eliminar(\'' +${ puesto.codigopuesto} +'\');'" class="btn btn-danger">Eliminar</a></td>
+                </tr>
+            </table>
         </div>
-   
-<!--</div>-->
-<div class="col-md-12">
+        <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
- </div>
-   </div> 
+    </div>
+</div> 
 </body>
 <script th:inline="javascript">
-      $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
+    $(document).ready(function () {
+    $('#tablita').DataTable({
+    "language": {
     "sProcessing":     "Procesando...",
-    "sLengthMenu":     "Mostrar _MENU_ registros",
-    "sZeroRecords":    "No se encontraron resultados",
-    "sEmptyTable":     "Ningún dato disponible en esta tabla",
-    "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-    "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
-    "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
-    "sInfoPostFix":    "",
-    "sSearch":         "Buscar:",
-    "sUrl":            "",
-    "sInfoThousands":  ",",
-    "sLoadingRecords": "Cargando...",
-    "oPaginate": {
-        "sFirst":    "Primero",
-        "sLast":     "Último",
-        "sNext":     "Siguiente",
-        "sPrevious": "Anterior"
-    },
-    "oAria": {
-        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
-        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
-    }
-}} );
+            "sLengthMenu":     "Mostrar _MENU_ registros",
+            "sZeroRecords":    "No se encontraron resultados",
+            "sEmptyTable":     "Ningún dato disponible en esta tabla",
+            "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+            "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+            "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+            "sInfoPostFix":    "",
+            "sSearch":         "Buscar:",
+            "sUrl":            "",
+            "sInfoThousands":  ",",
+            "sLoadingRecords": "Cargando...",
+            "oPaginate": {
+            "sFirst":    "Primero",
+                    "sLast":     "Último",
+                    "sNext":     "Siguiente",
+                    "sPrevious": "Anterior"
+            },
+            "oAria": {
+            "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+                    "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+            }
+    }});
+    });</script>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if ([[${msg}]] === 3){
+    swal({
+
+    title: "Exito!",
+            text: "Registro Eliminado correctamente",
+            type: "success",
+            icon: "success",
+            }).then(function() {
+    location.href = '../../puestos/';
     });
-	</script>
-        <script th:inline="javascript">
-        $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
-                text: "Registro Eliminado correctamente",
-                type: "success",
-                icon: "success",
-       }).then(function() {
-                location.href = '../../puestos/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
-        swal({
-                title: "ERROR!",
-                text: "Ocurrio un error al eliminar el registro",
-                type: "error",
-                icon: "error"
-       });
+    }
+
+    if ([[${msg}]] === 4){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error al eliminar el registro",
+            type: "error",
+            icon: "error"
+            });
     }
     });
-        
-        function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
-                text: "Favor confirme que desea eliminar este registro!",
-                icon: "warning",
-                buttons: true,
-                dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
-                    });
-        }
-    </script>
+    function eliminar(id) {
+    swal({
+    title: "Desea Eliminar?",
+            text: "Favor confirme que desea eliminar este registro!",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+    })
+            .then((willDelete) => {
+            if (willDelete) {
+            location.href = './delete/' + id;
+            } else {
+            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+            }
+            });
+    }
+</script>
 </html>
